--- a/Template.html
+++ b/Template.html
@@ -63,8 +63,60 @@
                 <h2 class="main__position">Информация о должности</h2>
                 <p class="main__text mb-3">Всю информацию о данной должности можно узнать здесь.</p>
             </div>
-            <div class="main__content">
+            <div class="main__content w-100">
                 <!-- Тут должен быть контент -->
+                <ul class="main__ul d-flex flex-column align-items-center">
+                    <li class="mt-3 col-10 d-flex flex-column align-items-center">
+                        <div class="col-7 li__base li__active li__block d-flex justify-content-between align-items-center p-2 revealator-slideleft revealator-once revealator-below">
+                            <p class="li__title">1. Общие положения</p>
+                            <img src="img/round.png" alt="" class="li__item">
+                        </div>
+                        <div class="li__text col-9 pt-5 pb-5" style="display: none;">
+                            <div class="squard col-3 d-flex align-items-center">
+                                <p class="squard__text text-center">01. Настоящая Должностная инструкция определяет основные 
+                                параметры работы сотрудника компании на должности Охранник
+                                (далее - «Сотрудник»).</p>
+                            </div>
+                            <div class="squard col-3 d-flex align-items-center">
+                                <p class="squard__text text-center">02. Сотрудник назначается на должность и освобождается от 
+                                    должности Руководителем АХС по согласованию с Руководителем
+                                Кадровой службы и Начальником охраны.</p>
+                            </div>
+                            <div class="squard col-3 d-flex align-items-center">
+                                <p class="squard__text text-center">03. Сотрудник непосредственно подчинен Начальнику охраны 
+                                    (далее - «Руководитель»).</p>
+                            </div>
+                            <div class="squard col-3 d-flex align-items-center">
+                                <p class="squard__text text-center">04. Свою работу и отношения по работе Сотрудник строит 
+                                    на основе: законодательства РФ, регулирующих данную деятельность
+                                внешних и внутренних нормативных и других документов</p>
+                            </div>
+                            <div class="squard col-3 d-flex align-items-center">
+                                <p class="squard__text text-center">05. Сотрудник строит на основе: законодательства РФ, регулирующих 
+                                    данную деятельность документов, установленных
+                                положением о АХС, Положением о Группе охраны, настоящей Должностной инструкции.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mt-3 col-10 d-flex flex-column align-items-center">
+                        <div class="col-7 li__base li__active li__block d-flex justify-content-between align-items-center p-2 revealator-slideleft revealator-delay2 revealator-once revealator-below">
+                            <p class="li__title">2. Должностные обязанности</p>
+                            <img src="img/round.png" alt="" class="li__item">
+                        </div>
+                    </li>
+                    <li class="mt-3 col-10 d-flex flex-column align-items-center">
+                        <div class="col-7 li__base li__active li__block d-flex justify-content-between align-items-center p-2 revealator-slideleft revealator-delay3 revealator-once revealator-below">
+                            <p class="li__title">3. Основные функции</p>
+                            <img src="img/round.png" alt="" class="li__item">
+                        </div>
+                    </li>
+                    <li class="mt-3 col-10 d-flex flex-column align-items-center">
+                        <div class="col-7 li__base li__active li__block d-flex justify-content-between align-items-center p-2 revealator-slideleft revealator-delay4 revealator-once revealator-below">
+                            <p class="li__title">4. Ответственность</p>
+                            <img src="img/round.png" alt="" class="li__item">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -73,18 +125,15 @@
         <div class="col-11 d-flex justify-content-around align-items-center">
             <p>© 2008–2020. Все права защищены. <a href="https://rosatom.ru/about/contact-info/"
                     class="footer__link">Государственная
-                    корпорация по атомной энергии «Росатом»</a><br>
-                При использовании материалов ссылка на сайт <a href="https://rosatom.ru/"
-                    class="footer__link">www.rosatom.ru</a> обязательна</p>
+                    корпорация по атомной энергии «Росатом»</a></p>
             <p><a href="mailto:0707@rosatom.ru" class="footer__link">Сообщить о коррупции:</a> 800-100-0707</p>
             <p><a href="mailto:press@rosatom.ru" class="footer__link">Данный одностраничник основан на оригинальгом
                     документе</a></p>
         </div>
     </footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-</script>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 </script>
@@ -92,4 +141,5 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
 <script src="js/fm.revealator.jquery.min.js"></script>
+<script src="js/animation-block.js"></script>
 </html>
